# kafka-market-stream

./: .gitignore  README.md  docker-compose.grafana.yml  nginx-deployment.yaml  pyproject.toml  test-metrics.json
.github/workflows/: ci.yml
api/: Dockerfile  duckdb-api.py  requirements.txt
data/: create_market_ticks_table.py  duckdb_once_setup_grafana.py  generate_sample_data.py  grafana_dashboard1_settings.json  grafana_dashboard2_settings.json  indices_sample.csv  market_data.duckdb
docs/: metrics.md
docs/diagrams/: classes_market_streaming.cmapx  classes_market_streaming.puml  packages_market_streaming.puml
docs/excalidraw-diags/: kafka-market-stream_docs_excalidraw-diags_pipeline.png:Zone.Identifier  pipeline.excalidraw.json
notebooks/: market_ticks_exploration.ipynb  pipeline_metrics_exploration.ipynb
notebooks/.ipynb_checkpoints/: market_ticks_exploration-checkpoint.ipynb  pipeline_metrics_exploration-checkpoint.ipynb
notes/: kebernetes_us10.md
scripts/: run_pipeline.sh
src/: consumer.py  producer.py
src/kafka_market_stream.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/market_streaming/: cli_helpers.py  main_consumer.py  main_producer.py
src/market_streaming/application/: consumer_services.py  ports.py  producer_services.py
src/market_streaming/domain/: models.py
src/market_streaming/infrastructure/: csv_tick_source.py  duckdb_metrics_repository.py  duckdb_repository.py  json_file_logger.py  kafka_consumer.py  kafka_tick_publisher.py
tests/: test_pipeline_integration.py
