[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kafka-market-stream"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "black[jupyter]>=25.12.0",
    "confluent-kafka>=2.12.2",
    "duckdb>=1.4.3",
    "flask>=3.1.2",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "notebook>=7.5.1",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
    "integration: integration tests",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "docker>=7.1.0",
    "pylint>=4.0.4",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]

[tool.pylint.'MESSAGES CONTROL']
disable = [
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  "too-few-public-methods",
  "too-many-locals",
  "too-many-statements",
  "invalid-name",
]

[tool.pylint.main]
# For src layout
init-hook = "import sys; from pathlib import Path; sys.path.append(str(Path('src').resolve()))"